# CodingAgent

./: .gitignore  CHANGELOG.md  CodeAgent.bat  CreateDesktopShortcut.bat  README.md  config.yaml  install.bat  install.sh  make_shortcut.ps1  pyproject.toml  requirements.txt  setup.py
agent/: __init__.py  main.py
agent/core/: config.py  conversation.py  engine.py  llm.py
agent/prompts/: system.py
agent/tools/: agent_scanner.py  base.py  bash.py  file_ops.py  git.py  search.py  web.py
agent/utils/: formatting.py  safety.py
design/: README.md
design/adr/: ADR-001-local-only-ollama-backend.md  ADR-002-zero-external-dependencies.md  ADR-003-dual-tool-call-parsing.md  ADR-004-safety-first-approval-model.md  ADR-005-context-windowing-strategy.md  ADR-006-duckduckgo-web-search.md  ADR-007-modular-tool-registry.md  ADR-008-cross-platform-shell-execution.md  README.md
design/c4-model/: c1-context.md  c2-container.md  c3-component.md  c4-code.md
docs/: AGENT_SCANNER.md  ARCHITECTURE.md  CONFIGURATION.md  QUICKSTART.md  TOOLS.md
tests/: test_engine.py  test_tools.py
