[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeagent"
version = "1.0.0"
description = "An offline coding agent powered by local LLMs via Ollama"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

[project.scripts]
codeagent = "agent.main:main"

[tool.setuptools.packages.find]
include = ["agent*"]
